--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
 .foto{
-    background-image: url("fundo.jpg");
+    background-image: url("Fotos/Fundo.jpg");
     margin: 0;
     border: 0;
-    
 }
 .form{
 font-size: 20px;
 text-align: center;
-
 }
 .main{
     color: white;
@@ -56,7 +54,7 @@ body{
 .cardapio{
   align-items: left;
   background-repeat: no-repeat;
-  background-image: url("cardapio.jfif") ;
+  background-image: url("Fotos/cardapio.jfif") ;
   color: white;
   background-size: 100%;
   background-position: center;
