--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body{
 .cardapio{
   align-items: left;
   background-repeat: no-repeat;
-  background-image: url("Fotos/cardapio.jfif") ;
+  background-image: url("Fotos/Cardapio.jfif") ;
   color: white;
   background-size: 100%;
   background-position: center;
